[package]
name = "nbt"
description = "A low level NBT (named binary tags) encoder and decoder library"
version = "0.1.2"
authors = ["Lukas Niederbremer <Lukas.Niederbremer@gmail.com>"]

keywords = ["nbt"]
license = "LGPL-2.1"

include = [
    "src/lib.rs",
    "src/traits.rs",
    "src/types.rs",
    "src/util.rs",
    "src/encode.rs",
    "src/decode.rs",
    "Cargo.toml"
]

documentation = "http://nullptr.eu/rsnbt/nbt/"
repository = "https://github.com/FliPPeh/nbt.rs"

[dependencies]
flate2 = "*"
